--- a/app/game.project
+++ b/app/game.project
@@ -16,6 +16,7 @@ input_method = HiddenInputField
 title = tsd-castlefight
 version = 0.1
 dependencies#0 = https://github.com/ts-defold/defold-lldebugger/archive/extension.zip
+dependencies#1 = https://github.com/britzl/monarch/archive/refs/tags/5.1.1.zip
 
 [render]
 clear_color_red = 0.19
