--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "dev": "tstl --watch"
   },
   "devDependencies": {
-    "prettier": "^3.1.0",
     "@ts-defold/library": "^0.1.1",
     "@ts-defold/tstl-userdata-sugar": "^1.0.1",
-    "@ts-defold/types": "^1.2.51",
+    "@ts-defold/types": "1.2.68",
     "eslint": "^9.0.0",
+    "prettier": "^3.1.0",
     "tstl-export-to-global": "^1.0.1",
     "tstl-trim-extensions": "^1.0.3",
     "typescript": "5.7.2",
