--- a/app/game.project
+++ b/app/game.project
@@ -1,5 +1,5 @@
 [bootstrap]
-main_collection = /main/main.collectionc
+main_collection = /controller/controller.collectionc
 
 [script]
 shared_state = 1
