--- a/app/game.project
+++ b/app/game.project
@@ -17,6 +17,7 @@ title = tsd-castlefight
 version = 0.1
 dependencies#0 = https://github.com/ts-defold/defold-lldebugger/archive/extension.zip
 dependencies#1 = https://github.com/britzl/monarch/archive/refs/tags/5.1.1.zip
+dependencies#2 = https://github.com/Insality/druid/archive/refs/tags/1.1.0.zip
 
 [render]
 clear_color_red = 0.19
