--- a/app/game.project
+++ b/app/game.project
@@ -1,5 +1,5 @@
 [bootstrap]
-main_collection = /main/main.collectionc
+main_collection = /controller/controller.collectionc
 
 [script]
 shared_state = 1
@@ -16,6 +16,8 @@ input_method = HiddenInputField
 title = tsd-castlefight
 version = 0.1
 dependencies#0 = https://github.com/ts-defold/defold-lldebugger/archive/extension.zip
+dependencies#1 = https://github.com/britzl/monarch/archive/refs/tags/5.1.1.zip
+dependencies#2 = https://github.com/Insality/druid/archive/refs/tags/1.1.0.zip
 
 [render]
 clear_color_red = 0.19
